--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -32,6 +32,7 @@
             <ul class="dropdown-menu" role="menu">
               <li class="divider"></li>
               <li><a href="#" onclick="menuProjectExport(); return false;"><span class="glyphicon glyphicon-cloud-download"></span> Export</a></li>
+              <li><a href="#" onclick="menuProjectSave(); return false;"><span class="glyphicon glyphicon-save"></span> Save</a></li>
             </ul>
           </li>
 
